# MLPro-Int-Optuna

./: LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pypi_deploy.yml
deployment/conda/: meta.yaml
deployment/pypi/: setup.cfg
doc/rtd/: conf.py  index.rst  requirements.txt
doc/rtd/content/01_Examples/appendix1/: main.rst
doc/rtd/content/01_Examples/appendix1/sub/: 03_howto.rl.rst
doc/rtd/content/01_Examples/appendix1/sub/howto/: howto.rl.ht.002.rst
doc/rtd/content/01_examples_pool/: howto.rl.ht.002.rst
doc/rtd/content/02_API/appendix2/: main.rst
doc/rtd/content/02_api_references/: optuna.rst
doc/rtd/content/02_appendices/appendix1/: main.rst
doc/rtd/content/02_appendices/appendix1/sub/howto/: howto.rl.ht.002.rst
doc/rtd/content/03_About/: main.rst
doc/rtd/content/03_About/sub/: 02_disclaimer.rst
doc/rtd/content/03_about/: 01_versions.rst
src/: setup.py
src/mlpro_int_optuna/: __init__.py
src/mlpro_int_optuna/wrappers/: __init__.py  optuna.py
test/howtos/rl/: howto_rl_ht_001_optuna.py
