[metadata]
name = mlpro_int_optuna
version = 0.1.0
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro: Integration Optuna
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro-int-optuna.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro-int-optuna.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    dill
    numpy
    matplotlib
    multiprocess
    mlpro
    optuna
    pandas